Minor spacing fixes.

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,6 @@ ul {
 }
 
 /********************************** Navigation Section *********************************/
-
 .navbar-brand {
   margin-left: 0em;
 }
@@ -54,7 +53,7 @@ ul {
 
 /********************************** Greeting Section *********************************/
 #title {
-  margin-top: 20%;
+  padding-top: 15rem;
   margin-left: auto;
   margin-right: auto;
 }
@@ -76,12 +75,14 @@ ul {
 
 /********************************** About Section *********************************/
 #about {
+  padding-top: 5rem;
   margin-left: auto;
   margin-right: auto;
 }
 
 /********************************** Experience Section *********************************/
 #experience {
+  padding-top: 5rem;
   margin-left: auto;
   margin-right: auto;
 }
@@ -92,14 +93,14 @@ ul {
 
 /********************************** Education Section *********************************/
 #education {
-  
+  padding-top: 5rem;
   margin-left: auto;
   margin-right: auto;
 }
 
 /********************************** Projects Section *********************************/
 #projects {
-  
+  padding-top: 5rem;
   margin-left: auto;
   margin-right: auto;
 }
@@ -114,8 +115,8 @@ ul {
 
 /********************************** Contact Section *********************************/
 .contact {
+  padding-top: 5rem;
   text-align: center;
-  
   margin-bottom: 10%;
   margin-left: auto;
   margin-right: auto;
